--- a/app/src/main/res/layout/activity_super_admin_editar_perfil.xml
+++ b/app/src/main/res/layout/activity_super_admin_editar_perfil.xml
@@ -187,7 +187,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_marginBottom="16dp">
+            android:visibility="gone"
+            android:layout_marginBottom="24dp">
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/tilLatitud"
@@ -237,11 +238,12 @@
             android:layout_height="wrap_content"
             android:text="Guardar"
             android:textAllCaps="true"
-            android:textSize="18sp"
+            android:textSize="16sp"
             android:backgroundTint="@color/btn_medium"
             android:textColor="@android:color/white"
-            android:padding="12dp"
-            android:layout_margin="12dp"
+            android:fontFamily="@font/sen_font"
+            android:padding="14dp"
+            android:layout_marginVertical="24dp"
             android:textStyle="bold"/>
     </LinearLayout>
 </LinearLayout>
