--- a/app/src/main/res/layout/activity_super_admin_detalle_restaurante.xml
+++ b/app/src/main/res/layout/activity_super_admin_detalle_restaurante.xml
@@ -40,17 +40,17 @@
             app:layout_constraintBottom_toBottomOf="parent"
             android:fontFamily="@font/sen_font"/>
 
-        <Button
-            android:id="@+id/btnEdit"
-            style="?attr/materialIconButtonFilledStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:contentDescription="Editar"
-            app:icon="@drawable/ic_edit"
-            android:backgroundTint="@color/btn_medium"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+<!--        <Button-->
+<!--            android:id="@+id/btnEdit"-->
+<!--            style="?attr/materialIconButtonFilledStyle"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:contentDescription="Editar"-->
+<!--            app:icon="@drawable/ic_edit"-->
+<!--            android:backgroundTint="@color/btn_medium"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintTop_toTopOf="parent"-->
+<!--            app:layout_constraintBottom_toBottomOf="parent"/>-->
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -205,19 +205,6 @@
                 app:iconTint="#000000"
                 android:layout_marginVertical="8dp"/>
 
-            <!-- Botón de registro -->
-            <Button
-                android:id="@+id/btnRegistrar"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Eliminar"
-                android:textAllCaps="true"
-                android:textSize="18sp"
-                android:backgroundTint="@android:color/holo_red_light"
-                android:textColor="@android:color/white"
-                android:padding="14dp"
-                android:layout_marginVertical="8dp"
-                android:textStyle="bold"/>
         </LinearLayout>
 
     </androidx.core.widget.NestedScrollView>
