--- a/app/src/main/res/layout/activity_super_admin_agregar_restaurante.xml
+++ b/app/src/main/res/layout/activity_super_admin_agregar_restaurante.xml
@@ -177,6 +177,7 @@
                 android:layout_marginBottom="16dp"
                 app:cardCornerRadius="8dp"
                 app:cardElevation="0dp"
+                android:visibility="gone"
                 app:strokeWidth="1dp"
                 app:strokeColor="@color/border_light">
 
@@ -229,6 +230,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
+                android:visibility="gone"
                 android:layout_marginBottom="16dp">
 
                 <com.google.android.material.textfield.TextInputLayout
